# ChangeLog for x11-libs/guile-gtk
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/guile-gtk/ChangeLog,v 1.20 2007/01/10 17:33:53 hkbst Exp $

  10 Jan 2007; <marijn@gentoo.org> guile-gtk-1.2.0.41.ebuild:
  Dependency update: dev-util/guile -> dev-scheme/guile.

  10 Jan 2007; <marijn@gentoo.org> guile-gtk-1.2.0.31.ebuild:
  Dependency update: dev-util/guile -> dev-scheme/guile.

  11 Nov 2005; Homer Parker <hparker@gentoo.org> guile-gtk-1.2.0.41.ebuild:
  Stable on amd64, fixes bug #107840

  06 Oct 2005; Michael Hanselmann <hansmi@gentoo.org>
  guile-gtk-1.2.0.41.ebuild:
  Stable on ppc.

  02 Oct 2005; Mark Loeser <halcy0n@gentoo.org> guile-gtk-1.2.0.41.ebuild:
  Stable on x86; bug #107840

*guile-gtk-1.2.0.41 (21 Jun 2005)

  21 Jun 2005; Marcelo Goes <vanquirius@gentoo.org> -guile-gtk-0.19.ebuild,
  +guile-gtk-1.2.0.41.ebuild:
  Remove old version, version bump. Trying to fix bug 95756.

  24 Apr 2005; Michael Hanselmann <hansmi@gentoo.org>
  guile-gtk-1.2.0.31.ebuild:
  Stable on ppc.

  19 Mar 2005; Mike Doty <kingtaco@gentoo.org> guile-gtk-1.2.0.31.ebuild:
  ~amd64 added

  05 Sep 2004; Sven Wegener <swegener@gentoo.org> :
  Fixed ChangeLog header.

  05 Jun 2004; David Holm <dholm@gentoo.org> guile-gtk-1.2.0.31.ebuild:
  Added to ~ppc.

  26 Apr 2004; Aron Griffis <agriffis@gentoo.org> guile-gtk-0.19.ebuild:
  Add die following econf for bug 48950

  26 Apr 2004; Aron Griffis <agriffis@gentoo.org> guile-gtk-0.19-r1.ebuild,
  guile-gtk-1.2.0.31.ebuild:
  Add die following econf for bug 48950

  17 Apr 2004; Daniel Ahlberg <aliz@gentoo.org> guile-gtk-0.19-r1.ebuild:
  Inherit eutils, added IUSE=

  10 Jan 2004; Mike Gardiner <obz@gentoo.org> guile-gtk-1.2.0.31.ebuild:
  Fixed install *.sc to *.scm typo, to install the examples

*guile-gtk-1.2.0.31 (18 Jul 2003)

  18 Jul 2003; Alastair Tse <liquidx@gentoo.org> guile-gtk-1.2.0.31.ebuild:
  version bump. this ver is compat with guile-1.6
