@@ -1,6 +1,6 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/guile-gtk/guile-gtk-1.2.0.41.ebuild,v 1.4 2005/11/11 22:23:32 hparker Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/guile-gtk/guile-gtk-1.2.0.41.ebuild,v 1.5 2007/01/10 17:33:53 hkbst Exp $
 
 MAJOR_PV=${PV%.[0-9]*.[0-9]*}
 MINOR_PV=${PV#[0-9]*.[0-9]*.}
@@ -14,7 +14,7 @@ KEYWORDS="amd64 ppc x86"
 IUSE=""
 
 
-DEPEND=">=dev-util/guile-1.6
+DEPEND=">=dev-scheme/guile-1.6
 	=x11-libs/gtk+-1.2*"
 
 S=${WORKDIR}/${MY_P}
